<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="integrador.senac.com.crasyrunner.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeJogo"
        android:textSize="44dp"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <Button
            android:id="@+id/btnInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio"
            android:textSize="24dp"
            android:textAlignment="center"
            android:onClick="inciaJogo"/>

        <Button
            android:id="@+id/btnRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textSize="22dp"
            android:textAlignment="center"
            android:onClick="rank"/>

        <Button
            android:id="@+id/btnSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair"
            android:textAlignment="center"
            android:textSize="18dp"
            android:onClick="sair"/>

    </LinearLayout>


</RelativeLayout>
